# HidingIn

./: .gitignore  CMakeLists.txt  README.md  localProperties.cmake  main.cpp  main.mm  readme.md
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
CMakeScripts/: ReRunCMake.make
Control/macos/: RemoteInputControllerMacOS.h  RemoteInputControllerMacOS.mm
DataModel/: SnapShotImageProvider.cpp  SnapShotImageProvider.h  WindowAbstractListModel.h  WindowAbstractListModelMacOS.mm  WindowModel.h
Debug/: HidingIn
DesktopCapture/: CompositeCapture.h  CompositeCaptureMacOS.mm
DesktopCapture/common/: CaptureFrameItem.cpp  CaptureFrameItem.h  CaptureStuff.h
DesktopCapture/macos/: MacOSAppSnapShot.h  MacOSAppSnapShot.mm  MacOSCaptureSCKit.h  MacOSCaptureSCKit.mm  MacosCapture.h  MacosCapture.mm
GPUPipeline/: PipelineConfiguration.h  PipelineInOut.h
GPUPipeline/macos/: MetalPipeline.h  MetalPipeline.mm  MetalResources.h  MetalResources.mm
Graphics/: MetalProcessor.h  MetalProcessor.mm
Handler/: AppGeneralEventHandler.cpp  AppGeneralEventHandler.h  AppItemClickHandler.cpp  AppItemClickHandler.h  AppWindowListener.h  AppWindowListener.mm  GlobalEventHandler.h  GlobalEventHandler.mm
RenderWidget/: QCustomRenderNode.h  QCustomRenderNode.mm  QMetalGraphicsItem.h  QMetalGraphicsItem.mm
com/: EventListener.h  NotificationCenter.h
platform/macos/: MacUtils.h  MacUtils.mm
resources/: AppListComponent.qml  CapturedAppPage.qml  CustomizeTitleBar.qml  FullScreenBackground.qml  HomePage.qml  NavSection.qml  main.qml  resources.qrc
resources/shader/: render.metal  textureBlendHide.metal  textureBlendHideCompute.metal
utils/: TaskQueue.h  WindowLogic.cpp  WindowLogic.h
